#11 fix wait in coroutine, fix passedTests and time
